<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">QUIZ APP</string>
    <string name="get_started">GET STARTED</string>
    <string name="your_name">Your name</string>
    <string name="choose_contact">CHOOSE CONTACT</string>
    <string name="next">NEXT</string>
    <string name="quiz_result">Quiz result</string>
    <string name="quizStr">Enjoy the quiz app, where you can:</string>
    <string name="testYourSkills">Test your skills</string>
    <string name="readQuestions">Read questions</string>
    <string name="createQuention">Create question</string>
    <string name="menuOptions">Menu options</string>
    <string name="enjoyTheQuiz">Enjoy the quiz</string>
    <string name="home">Home</string>
    <string name="quizTime">Quiz time</string>
    <string name="profile">Profile</string>
    <string name="listOfQuestions">List of questions</string>
    <string name="newQuestion">New question</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="tryAgain">Try again</string>
    <string name="playerName">Player name:</string>
    <string name="highScore">High score:</string>
    <string name="zeroPoint">0 points</string>
    <string name="johnny">Johnny</string>
    <string name="singleAnswer">Single answer</string>
    <string name="questionPlaceholder">Question placeholder</string>
    <string name="answers">Answers</string>
    <string name="correctAnswer">Correct answer</string>
    <string name="answer">Answer</string>
    <string name="addquestion">ADD QUESTION</string>
    <string name="no">no</string>
    <string name="details">DETAILS</string>
    <string name="delete">DELETE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>